--- a/flutter_login_whatapp/pubspec.yaml
+++ b/flutter_login_whatapp/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   camera: ^0.9.8+1
   http: any
   flutter_svg: ^1.1.1+1
+  flutter_riverpod: ^1.0.4
+  dio: ^4.0.6
+  location: ^4.4.0
+  permission_handler: ^9.2.0
 
 dev_dependencies:
   flutter_test:
@@ -64,6 +68,7 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
+    - assets/backgrounds/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
